Fix deprecated Long invocation